# fake-ci

./: Cargo.toml  Dockerfile  checkout-container.sh  entrypoint.sh  fake-ci.sh  gitconfig  initialise-example-repo.sh  job-container.sh  preparation-container.sh  readme.md
src/: core.rs  error.rs  file.rs  git.rs  main.rs
src/commands/: image.rs  mod.rs  print.rs  prune.rs  run.rs
src/commands/prune/: mod.rs
src/gitlab/: configuration.rs  deserialise.rs  error.rs  merge.rs  mod.rs  variables.rs
src/io/: docker.rs  mod.rs  processes.rs  prompt.rs  shell.rs  variables.rs
src/settings/: mod.rs  structure.rs
tests/: end_to_end_tests.rs  integration_tests.rs
tests/configurations/: end-to-end-gitlab-ci.yml  example-gitlab-ci.yml
