[package]
name = "fake-ci"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-recursion = "1.0"
async-trait = "0.1"
regex = "1.6"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["serde_derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2.3"

[dev-dependencies]
assert_cmd = "2.0"
