[package]
name = "fake-ci"
description = "Run your CI pipelines locally for quicker iterations and faster feedback."
version = "0.1.0"
edition = "2021"

[features]
docker_tests = [] # used to separate tests that rely on Docker

[dependencies]
anyhow = "1.0"
async-recursion = "1.0"
async-trait = "0.1"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.25"
dialoguer = "0.10"
duct = "0.13"
regex = "1.6"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["serde_derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2.3"

[dev-dependencies]
assert_cmd = "2.0"
